Fixed quantity cards owned for merging and added better visuals for home page